<resources>
    <string name="app_name">E-FCR App</string>
    <string name="echo_logo_drawable_description">ECHO logo</string>
    <string name="echo_logo_title">ECHO</string>
    <string name="echo_logo_text">European network of cybersecurity centres and competence hub for innovation and operations</string>

    <string name="login_email">Email</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_invalid_username">"Invalid username"</string>
    <string name="login_invalid_password">"Invalid password"</string>
    <string name="login_password">Password</string>
    <string name="login_sign_in">Sign in</string>

    <string name="biometric_prompt_title">Sign the Service Request</string>
    <string name="biometric_prompt_subtitle">Sign using your biometric credential</string>
    <string name="biometric_prompt_description">Use your fingerprint to sign the Service Request.</string>
    <string name="biometric_prompt_negative">Cancel</string>

    <string name="service_request_item_name_placeholder">__service request name placeholder__</string>
    <string name="service_request_item_date_placeholder">__date__</string>
    <string name="service_request_item_status_placeholder">__status__</string>
    <string name="service_request_button_sign">Sign</string>
</resources>
