<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/service_request_item_name_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/service_request_name"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:text="@string/service_request_item_status_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/service_request_status"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/default_margin"
        app:layout_constraintTop_toBottomOf="@+id/service_request_name"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_corners" />

    <TextView
        android:text="@string/service_request_item_date_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/service_request_date"
        app:layout_constraintStart_toEndOf="@+id/service_request_status"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/service_request_name"
        android:layout_marginTop="16dp" />

    <Button
        android:text="@string/service_request_button_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sign_button"
        app:layout_constraintTop_toBottomOf="@+id/service_request_status"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/default_margin" />
</androidx.constraintlayout.widget.ConstraintLayout>