<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_launcher_background">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/echo_logo_image"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:contentDescription="@string/echo_logo_drawable_description"
            app:srcCompat="@drawable/ic_launcher_echo_logo2" />

        <TextView
            android:id="@+id/echo_logo_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/echo_logo_title"
            android:textColor="@color/white"
            android:textSize="75sp" />

        <TextView
            android:id="@+id/echo_logo_text"
            android:layout_width="match_parent"
            android:layout_height="64sp"
            android:paddingLeft="4sp"
            android:paddingRight="4sp"
            android:text="@string/echo_logo_text"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>