<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/item_padding">

    <LinearLayout
        android:id="@+id/serviceRequestItemHeading"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/serviceRequestItemDate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/service_request_item_date_placeholder" />

        <Space
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/serviceRequestItemStatus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/round_corners"
            android:text="@string/service_request_item_status_placeholder"
            android:textAllCaps="true"
            android:textSize="@dimen/item_text_size" />
    </LinearLayout>

    <TextView
        android:id="@+id/serviceRequestItemName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/service_request_item_name_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serviceRequestItemHeading"
        android:textSize="@dimen/item_text_size" />
</androidx.constraintlayout.widget.ConstraintLayout>

